ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Server: vica";
      custom-http-errors: '502'
spec:
  rules:
  - host: mychat.local
    http:
      paths:
      - path: /
        backend:
          serviceName: mychat-app
          servicePort: 5000
